--- a/frontend/edit.html
+++ b/frontend/edit.html
@@ -28,7 +28,7 @@
             <label for="address">Address:</label>
             <textarea id="address" placeholder="Enter Address"></textarea>
 
-            <button type="submit">Save Changes</button>
+            <button class="submit-button" type="submit">Save Changes</button>
         </form>
     </div>
 
