--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,11 +38,9 @@
                     <textarea id="address" required></textarea>
                 </div>
             </div>
-            <button type="submit">Submit</button>
+            <button class="submit-button" type="submit">Submit</button>
         </form>
     </div>
-    
-    
 
     <div id="output"></div>
 
